--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
     "@mui/material-nextjs": "^6.0.1",
+    "@mui/x-data-grid": "^7.16.0",
     "@tanstack/react-query": "^5.52.3",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
